test/expected/declare_t.out
declare x as y
             ^
14: error: "y": unknown name
